--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.1.3",
     "path": "^0.12.7",
     "pug": "^3.0.2",
+    "serve-favicon": "^2.5.0",
     "ws": "^8.16.0"
   }
 }
