--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
+    "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "pug": "^3.0.2",
     "serve-favicon": "^2.5.0",
